--- a/README
+++ b/README
@@ -8,6 +8,9 @@ https://en.wiktionary.org/wiki/house_of_worship
 
 # grote steden beleid
 https://nl.wikipedia.org/wiki/Grotestedenbeleid
+
+# footprint
+https://en.wikipedia.org/wiki/Footprint
  
 # genocide
 https://en.wikipedia.org/wiki/Genocide
