--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://en.wikipedia.org/wiki/Left-wing_politics
 # house of worship
 https://en.wiktionary.org/wiki/house_of_worship
 
+# pulpit
+https://en.wikipedia.org/wiki/Pulpit
+
 # grote steden beleid
 https://nl.wikipedia.org/wiki/Grotestedenbeleid
 
