--- a/README
+++ b/README
@@ -17,6 +17,9 @@ https://en.wikipedia.org/wiki/Pulpit
 # grote steden beleid
 https://nl.wikipedia.org/wiki/Grotestedenbeleid
 
+# theater
+https://en.wikipedia.org/wiki/Theater_(warfare)
+
 # footprint
 https://en.wikipedia.org/wiki/Footprint
  
